--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,10 +4,10 @@
   <input type="search">
 
   <ul class="categories">
-    <li class="Action" >Action</li>
-    <li class="Music" >Music</li>
-    <li class="Strategy" >Strategy</li>
-    <li class="Adventure" >Adventure</li>
+    <li class="Action" routerLink="type/action">Action</li>
+    <li class="Music" routerLink="type/music">Music</li>
+    <li class="Strategy" routerLink="type/strategy">Strategy</li>
+    <li class="Adventure" routerLink="type/adventure">Adventure</li>
   </ul>
 </header>
 
