--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -7,7 +7,7 @@
   <button >Version</button>
 </div>
 <div class="gamePage">
-  <div *ngFor="let App of user" class="gameBlock" >
+  <div *ngFor="let App of user" class="gameBlock" routerLink="game/{{App.app_short | lowercase }}">
     <img src="{{App.url}}">
     <h2>{{App.app_name}}</h2>
     <p>✩ {{App.all_rating}}</p>
