--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+
+
+.root{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+*{
+  outline: none;
+}
+
