--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,20 @@
-<header>
+<header >
   <img src="https://www.ixbt.com/short/images/2017/Sep/google_play_logo_2015-630x247.png"
        routerLink="">
   <input type="search" [(ngModel)]="searchVar" (change)="search()">
-
-  <ul class="categories">
-    <li class="Action" routerLink="type/action">Action</li>
-    <li class="Music" routerLink="type/music">Music</li>
-    <li class="Strategy" routerLink="type/strategy">Strategy</li>
-    <li class="Adventure" routerLink="type/adventure">Adventure</li>
-  </ul>
+  <div class="submenu">
+    <h1> Categories</h1>
+    <ul class="categories">
+      <li class="Action" routerLink="type/action">Action</li>
+      <li class="Music" routerLink="type/music">Music</li>
+      <li class="Strategy" routerLink="type/strategy">Strategy</li>
+      <li class="Adventure" routerLink="type/adventure">Adventure</li>
+    </ul>
+  </div>
+  <div *ngIf="user.id">
+    <img src="{{user.picture.data.url}}" alt="123" routerLink="user">
+    <button (click)="logout()">Logout</button>
+  </div>
+  <button (click)="login()" *ngIf="!user.id">Login</button>
 </header>
 
