--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -80,6 +80,7 @@ input[type = "search"]{
   }
   .submenu{
     width: 100px;
+
   }
   .categories{
     width: 50px;
@@ -91,3 +92,29 @@ input[type = "search"]{
     font-size: 18px;
   }
 }
+@media screen and (max-width: 610px){
+  header{
+    width: 400px;
+  }
+  input[type = "search"]{
+    height: 50px;
+    width: 100px;
+    font-size: 30px;
+  }
+  h1{
+    font-size: 15px;
+  }
+  .submenu{
+    width: 100px;
+  }
+  .categories{
+    width: 20px;
+    margin-top: 40px;
+  }
+  .categories > li{
+    width: 20px;
+    margin-left: -30px;
+    font-size: 18px;
+  }
+}
+
