--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -1,7 +1,9 @@
+
 *{
   outline: none;
 }
 .gameBlock{
+  display: -webkit-flex;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,7 +43,15 @@ img{
   background: white;
 }
 .gamePage{
+  display: -webkit-flex;
+  -ms-flex-direction: row;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  max-width: 1500px;
+  flex: 1;
+  -ms-flex-wrap: wrap;
   justify-content: space-evenly;
   flex-wrap: wrap;
   height: 350px;
@@ -58,4 +68,65 @@ button{
   background: #cad9e3;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
+}
+@media screen and (max-width: 1200px){
+  .gameBlock{
+    width: 200px;
+    height: 200px;
+  }
+  .normal{
+    height: 150px;
+    width: 150px;
+    border-radius: 10px;
+  }
+  .small{
+    height: 100px;
+    width: 100px;
+  }
+  .big{
+    height: 170px;
+    width: 170px;
+  }
+  h1{
+    display: none;
+  }
+  .gamePage{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    height: 320px;
+  }
+  .sortButton,.changeImg,.changeBack{
+    width: 70%;
+  }
+  button{
+    width: 70%;
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 710px){
+  .sortButton,.changeImg,.changeBack{
+    width: 50%;
+  }
+  h1{
+    display: none;
+  }
+  button{
+    margin: 15px;
+    width: 70%;
+    font-size: 10px;
+  }
+}
+
+@media screen and (max-width: 610px){
+  .sortButton,.changeImg,.changeBack{
+    width: 50%;
+  }
+  h1{
+    display: none;
+  }
+  button{
+    margin: 5px;
+  }
 }
