--- a/src/app/app-page/app-page.component.html
+++ b/src/app/app-page/app-page.component.html
@@ -1,6 +1,6 @@
 <div class="oneApp" *ngIf="oneApp">
-  <img src="{{oneApp.url}}">
-  <h1>{{oneApp.app_name}}</h1>
+  <img src="{{oneApp.url}}" class="oneApp__img">
+  <h1 class="oneApp__h1">{{oneApp.app_name}}</h1>
   <div>
     <p>Size : {{oneApp.file_size}}</p>
     <p>✩ {{oneApp.all_rating}}</p>
