--- a/src/app/app-page/app-page.component.css
+++ b/src/app/app-page/app-page.component.css
@@ -11,25 +11,11 @@
   width: 700px;
   border-radius: 20px;
 }
-img{
+.oneApp__img{
   height: 400px;
   width: 400px;
   border-radius: 20px;
 }
 h1,p,li{
   margin: 2px;
-}
-button{
-  margin: 20px;
-  border-radius: 28px;
-  color: #1f071f;
-  font-size: 27px;
-  background: #cad9e3;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
-}
-
-button:hover {
-  background: #c0e5fc;
-  text-decoration: none;
 }
