--- a/src/app/game-type/game-type.component.css
+++ b/src/app/game-type/game-type.component.css
@@ -1,4 +1,4 @@
-.gameBlock{
+.gamePage__div_list{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,7 +12,7 @@
 h2,p{
   margin: 2px;
 }
-img{
+.gamePage__img {
   margin-top: 10px;
   height: 150px;
   width: 150px;
@@ -28,7 +28,7 @@ img{
   display: flex;
   margin-left: 70px;
 }
-button{
+.component__button{
   margin: 20px;
   border-radius: 15px;
   color: #1f071f;
