fix magic numbers,types,bad names,safeguards

--- a/src/app/app-page/app-page.component.html
+++ b/src/app/app-page/app-page.component.html
@@ -1,9 +1,9 @@
 <div class="oneApp" *ngIf="oneApp">
-  <img src="{{oneApp.url}}" class="oneApp__img">
-  <h1 class="oneApp__h1">{{oneApp.app_name}}</h1>
+  <img src="{{oneApp.url}}">
+  <h1>{{oneApp.app_name}}</h1>
   <div>
     <p>Size : {{oneApp.file_size}}</p>
-    <p>✩ {{oneApp.all_rating}}</p>
+    <p>Rating {{oneApp.all_rating}}</p>
     <p>Type : {{oneApp.app_type | uppercase }}</p>
     <p>Downloads : {{oneApp.downloads}}</p>
     <p>Price : {{oneApp.price}}</p>
@@ -15,4 +15,5 @@
       <li>{{permissions}}</li>
     </div>
   </div>
+  <button>Download</button>
 </div>
