--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -6,7 +6,7 @@ header{
   justify-content: space-between;
   align-items: center;
 }
-.header__button{
+button{
   margin: 20px;
   border-radius: 15px;
   color: #1f071f;
@@ -15,54 +15,54 @@ header{
   padding: 10px 20px 10px 20px;
   text-decoration: none;
 }
-.header__img{
+img{
   height: 70px;
   width: auto;
 }
-.header__input{
+input[type = "search"]{
   height: 50px;
   width: 700px;
   font-size: 30px;
 }
-.header__div_submenu{
+.submenu{
   width: 200px;
   display: flex;
   justify-content: center;
 }
-.header__div_categories {
+.categories{
   display: none;
   position: absolute;
   width: 150px;
   margin-top: 60px;
   border-radius: 20px;
 }
-.header__div_categories > li{
+.categories > li{
   width: 50px;
   font-size: 20px;
   list-style-type: none;
 }
-.header__div_submenu:hover > .header__div_categories{
+.submenu:hover > .categories{
   display: block;
   background: white;
 }
 
 @media screen and (max-width: 1200px){
-  .header__input{
+  input[type = "search"]{
     height: 50px;
     width: 300px;
     font-size: 30px;
   }
-  .header__h1{
+  h1{
     font-size: 20px;
   }
-  .header__div_submenu{
+  .submenu{
     width: 100px;
   }
   .categories{
     width: 50px;
     margin-top: 40px;
   }
-  .header__div_categories > li{
+  .categories > li{
     width: 30px;
     margin-left: -30px;
     font-size: 18px;
@@ -70,51 +70,24 @@ header{
 }
 
 @media screen and (max-width: 1000px){
-  .header__input{
+  input[type = "search"]{
     height: 50px;
     width: 200px;
     font-size: 30px;
   }
-  .header__h1{
+  h1{
     font-size: 20px;
   }
-  .header__div_submenu{
+  .submenu{
     width: 100px;
-
   }
   .categories{
     width: 50px;
     margin-top: 40px;
   }
-  .header__div_categories > li{
+  .categories > li{
     width: 30px;
     margin-left: -30px;
     font-size: 18px;
   }
 }
-@media screen and (max-width: 610px){
-  header{
-    width: 400px;
-  }
-  .header__input{
-    height: 50px;
-    width: 100px;
-    font-size: 30px;
-  }
-  .header__h1{
-    font-size: 15px;
-  }
-  .header__div_submenu{
-    width: 100px;
-  }
-  .categories{
-    width: 20px;
-    margin-top: 40px;
-  }
-  .header__div_categories > li{
-    width: 20px;
-    margin-left: -30px;
-    font-size: 18px;
-  }
-}
-
