--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,27 +1,27 @@
 <div class="sortButton">
   <h1>Sort by :</h1>
-  <button (click)="sortMas('app_name')" class="component__button">Name</button>
-  <button (click)="sortMas('all_rating')" class="component__button">Rating</button>
-  <button (click)="sortMas('file_size')" class="component__button">Size</button>
-  <button (click)="sortMas('version')" class="component__button">Version</button>
+  <button (click)="sortArray(sortEnum.NAME)">Name</button>
+  <button (click)="sortArray(sortEnum.RATING)">Rating</button>
+  <button (click)="sortArray(sortEnum.SIZE)">Size</button>
+  <button (click)="sortArray(sortEnum.VERSION)">Version</button>
 </div>
-<div class="changeImg" >
-  <h1>Size(admin mode):</h1>
-  <button (click)="changeSizeImg('small')"  [disabled]="!admin.admin" class="component__button">Small</button>
-  <button (click)="changeSizeImg('normal')" [disabled]="!admin.admin" class="component__button">Normal</button>
-  <button (click)="changeSizeImg('big')" [disabled]="!admin.admin" class="component__button">Big</button>
+<div class="changeImg" *ngIf="user.admin">
+  <h1>Size:</h1>
+  <button (click)="changeSizeImg(sizeEnum.SMALL)">Small</button>
+  <button (click)="changeSizeImg(sizeEnum.NORMAL)">Normal</button>
+  <button (click)="changeSizeImg(sizeEnum.BIG)">Big</button>
 </div>
-<div class="changeBack">
-  <h1>Color(admin mode):</h1>
-  <button (click)="changeBackImg('white')" [disabled]="!admin.admin" class="component__button">White</button>
-  <button (click)="changeBackImg('blue')" [disabled]="!admin.admin" class="component__button">Blue</button>
-  <button (click)="changeBackImg('purple')" [disabled]="!admin.admin" class="component__button">Perple</button>
+<div class="changeBack" *ngIf="user.admin">
+  <h1>Size:</h1>
+  <button (click)="changeBackImg(colorEnum.WHITE)">White</button>
+  <button (click)="changeBackImg(colorEnum.BLUE)">Blue</button>
+  <button (click)="changeBackImg(colorEnum.PURPLE)">Perple</button>
 </div>
 <div class="gamePage">
-  <div *ngFor="let App of listOfApplication" class="gamePage__div_list gameBlock {{imgBackground}}" routerLink="game/{{App.app_short | lowercase }}">
-    <img src="{{App.url}}" class="gamePage__img  {{sizeImg}}">
+  <div *ngFor="let App of listOfApplication" class="gameBlock {{imgBackground}}" routerLink="game/{{App.app_short | lowercase }}">
+    <img src="{{App.url}}" class="{{sizeImg}}">
     <h2>{{App.app_name}}</h2>
-    <p>✩ {{App.all_rating}}</p>
+    <p>Rating {{App.all_rating}}</p>
   </div>
 </div>
 
