--- a/src/app/button/button.component.css
+++ b/src/app/button/button.component.css
@@ -1,3 +1,7 @@
+.sortButton,.changeImg,.changeBack{
+  display: flex;
+  margin-left: 70px;
+}
 button{
   margin: 20px;
   border-radius: 15px;
@@ -6,9 +10,4 @@ button{
   background: #cad9e3;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
-}
-.notFound{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
