--- a/src/app/dashboard/list/list.component.css
+++ b/src/app/dashboard/list/list.component.css
@@ -46,3 +46,24 @@ img{
   flex-wrap: wrap;
   height: 350px;
 }
+.submenu{
+  width: 200px;
+  display: flex;
+  justify-content: center;
+}
+.categories{
+  display: none;
+  position: absolute;
+  width: 150px;
+  margin-top: 60px;
+  border-radius: 20px;
+}
+.categories > li{
+  width: 50px;
+  font-size: 20px;
+  list-style-type: none;
+}
+.submenu:hover > .categories{
+  display: block;
+  background: white;
+}
